# ccgs

./: .clang-format  .gitignore  .gitmodules  CCG_description.tex  CCG_simulation.tex  CMakeLists.txt  README.md  format.sh
.github/workflows/: linux.yml
doc/: AD_CardGen.tex  AD_Simulation.tex  AD_Turn.tex  CCGS.tex  CCG_description.tex  CD.tex  CMakeLists.txt  CRC.tex  OD.tex  SD.tex  SD2.tex  StateD.tex  UC.tex  ccgs_description.tex  header.tex  output_concept  output_poc
src/: args.cc  args.hpp  card.cc  card.hpp  cards.cc  cards.hpp  cards_pool.cc  cards_pool.hpp  cards_queue.cc  cards_queue.hpp  common.cc  common.hpp  deck.cc  deck.hpp  export.cc  export.hpp  game.cc  game.hpp  game_params.cc  game_params.hpp  game_result.cc  game_result.hpp  game_state.cc  game_state.hpp  main.cc  player.hpp  random.cc  random.hpp  table.cc  table.hpp  trait.hpp  trait_impl.cc  trait_impl.hpp  traits.cc  traits.hpp
test/: CMakeLists.txt  args_test.cc  cards_pool_test.cc  cards_test.cc  common_test.cc  game_params_test.cc  game_test.cc  random_test.cc  traits_test.cc
tests/: CMakeLists.txt  args_test.cc  cards_test.cc  common_test.cc  game_test.cc
tool/: cards_analyser.py
